[package]
name = "escanor"
version = "0.1.0"
authors = ["Mambisi Zempare <lilbizi96@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.1.1"
tokio = { version = "0.2", features = ["full"] }
clap = "2.0.0"
console = "0.10.0"
log = "0.4.0"
regex = "1"
env_logger = "0.7.1"
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rstar = "0.7.1"
redis-protocol = "1.0.0"
geohash = "0.9.0"
linefeed = "0.6"
glob = "0.2.11"

[dev-dependencies]
env_logger = "0.7.1"
criterion = "0.3"

[[bench]]
name = "bench_main"
harness = false