[package]
name = "escanor"
version = "0.1.5"
authors = ["Mambisi Zempare <lilbizi96@gmail.com>"]
homepage = "escanor.io"
edition = "2018"

[[bin]]
name = "escanor-server"
path = "src/bin/server/main.rs"
[[bin]]
name = "escanor-cli"
path = "src/bin/cli/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.deb]
maintainer = "Mambisi Zempare <lilbizi96@gmail.com>"
copyright = "2020, Mambisi Zempare <lilbizi96@gmail.com>"
license-file = ["LICENSE", "2"]
depends = "$auto, systemd"
extended-description = """Escanor is a high performance in memory database written in rust \
 it offers performance similar to redis and implement the redis protocol with useful additions for json data manipulations."""
section = "admin"
priority = "optional"
assets = [
    ["assets/linux/escanor-server.service", "/etc/systemd/system/", "644"],
    ["assets/linux/config.yaml", "usr/.config/escanor/", "644"],
    ["assets/linux/escanor-server-s.sh", "usr/bin/", "755"],
    ["target/release/escanor-cli", "usr/bin/", "755"],
    ["target/release/escanor-server", "usr/bin/", "755"]
]

[dependencies]
lazy_static = "1.1.1"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
clap = "2.0.0"
console = "0.10.0"
regex = "1"
serde = { version = "1.0", features = ["rc","derive"] }
serde_json = "1.0"
rstar = { version = "0.8.2", features = ["serde"]}
redis-protocol = { path="./redis-protocol" }
proto = { path="./proto" }
geohash = "0.9.0"
linefeed = "0.6"
glob = "0.2.11"
nom = "5"
bytes = "0.5.4"
anyhow = "1.0"
cookie-factory = "0.3.1"
tungstenite = "0.10.1"
evmap = "9.0.0"
chrono = "0.4"
multimap = "0.8.1"
rmp-serde = "0.14.3"
app_dirs2 = "2"
json_dotpath = "1.0.2"
serde_yaml = "0.8"
jsonpath_lib = "0.2.4"
resp = "^0.3.6"
colored_json = "2.1.0"
tokio-util = { version = "0.3.1" , features = ["full"]}
dashmap = { version = "3.11.0" , features = ["serde"]}
rayon = "1.3.0"
nanoid = "0.3.0"
sled = "0.34.4"
bincode = "1.3.1"
async-raft = "0.5.5"
async-trait = "0.1.42"
jsonrpc-http-server = "15.0"
itertools = "0.9.0"
byteorder = "1.3.4"
dirs = "3.0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = { version = "0.2.3", default-features = false }
jsonrpc-derive = "15.1.0"
jsonrpc-core = "15.1.0"
tonic = "0.3"
prost = "0.6"

[dev-dependencies]
env_logger = "0.7.1"
criterion = "0.3"


[[bench]]
name = "bench_main"
harness = false