[package]
name = "redis-protocol"
version = "0.1.0"
authors = ["Mambisi Zempare <lilbizi96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
cookie-factory = "=0.2.4"
crc16 = "0.3"
log = "0.4"
nom = "4.0"
pretty_env_logger = "0.2"
serde = "1.0"

[dev-dependencies]
lazy_static = "1.1"
rand = "0.5"

[lib]
doc = true
doctest = true
name = "redis_protocol"
test = true